# omniapi

./: .env.example  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  ReleaseNotes.md  VERSION  debug_file_source.sh  main.cpp
api-specs/: README.md  openapi.yaml
api-specs/docs/: README.md  README_vi.md
api-specs/openapi/: README.md
api-specs/postman/: README.md  api.collection.json  build-collection.py  build-collection.sh
api-specs/scalar/: index.html
config/: config.json  config.json.example  rtconfig.json.example
debian/: bundle_libs.sh  changelog  control  postinst  postrm  prerm  rules
deploy/: README.md  deploy.sh  directories.conf  edge-ai-api.service  edgeos-api.service  omniapi.service  reinstall_gstreamer.sh
docs/: AI_RUNTIME_DESIGN.md  API_document.md  ARCHITECTURE.md  CAMERA_HANDLER_ARCHITECTURE.md  CVEDIX_SDK_INSTALL.md  DEFAULT_SOLUTIONS_REFERENCE.md  DEVELOPMENT.md  ENVIRONMENT_VARIABLES.md  HUONG_DAN_API.md  INSTALLATION.md  LOGGING.md  RTSP_OPEN_FAILED_LOG_ANALYSIS.md  SAMPLE_INSTANCE_CHECKLIST.md  SCRIPTS.md  SDK_ISSUE_REPORT_ASIO_SSE_BROKER.md  SERVER_SETTINGS_AND_MONITORING_API.md  VISION_AI_PROCESSING_PLATFORM.md  ZERO_DOWNTIME_ATOMIC_PIPELINE_SWAP_DESIGN.md  develop_doc_sample_CMakeLists_fix.txt
examples/: README.md
examples/default_solutions/: README.md  ba_crossline_default.json  ba_crossline_mqtt_default.json  ba_jam_default.json  ba_jam_mqtt_default.json  ba_stop_default.json  ba_stop_mqtt_default.json  face_detection_rtmp_default.json  face_detection_rtsp_default.json  object_detection_yolo_default.json  rtsp_face_detection_default.json  rtsp_face_detection_rtsp_output.json
examples/face_database/: configure_mysql_local.sh  configure_with_my_db.sh  debug_database_issue.sh
examples/instances/: README.md
examples/solutions/: README.md  ba_crossline.json  ba_crossline_with_mqtt.json  ba_jam.json  test_rtsp_face_detection.json
include/api/: ai_websocket.h  area_handler.h  config_handler.h  create_instance_handler.h  health_handler.h  hls_handler.h  instance_fps_handler.h  instance_handler.h  jams_handler.h  license_handler.h  lines_handler.h  log_handler.h  onvif_handler.h  quick_instance_handler.h  quick_instance_parser.h  scalar_handler.h  securt_handler.h  securt_line_handler.h  stops_handler.h  swagger_handler.h  system_handler.h  system_info_handler.h  version_handler.h  watchdog_handler.h
include/config/: system_config.h
include/core/: ai_processor.h  ai_runtime_facade.h  analytics_common_types.h  analytics_entities_manager.h  apply_logging_config.h  area_manager.h  area_storage.h  area_types.h  area_types_specific.h  backpressure_controller.h  categorized_logger.h  codec_manager.h  custom_mqtt_broker_nodes.h  daily_prefix_appender.h  decoder_detector.h  env_config.h  (+59 more)
packaging/: AUTO_VERSION.md  README.md
scripts/: check_missing_apis.py  clean_workers.sh  copy_cvedix_data.sh  create_directories.sh  debug_crossline_update_stream_loss.sh  debug_production.sh  dev_setup.sh  diagnose_spawn_worker.sh  fix_all_symlinks.sh  fix_freetype.sh  install_binary.sh  kill_port_8080.sh  load_env.sh  merge_openapi.py  run_worker_manual.sh  setup_shared_config.sh  split_openapi.py  test_ba_loitering_instances.py  test_onvif.sh  translate_vi_paths_common.py  utils.sh
src/: main.cpp
support/rtmp_fin_wrapper/: CMakeLists.txt  README.md  close_fin.c
tests/: CMakeLists.txt  README.md
tests/benchmark/: README.md  report_generator.py  run_benchmark.py  run_benchmark_generic.py
tests/benchmark/config/: instance_benchmark.json
tests/manual/: README.md
tests/manual/Analytics/: BA_AREA_ENTER_EXIT_API_TEST.md  BA_LOITERING_SOLUTION_TEST.md  LOITERING_CORE_API_TEST.md  LOITERING_SECURT_API_TEST.md  SECURT_AREA_MANUAL_TEST.md  SECURT_FULL_CONFIG_INSTANCE_TEST.md  SECURT_INSTANCE_API_MANUAL_TEST.md  SECURT_INSTANCE_WORKFLOW_TEST.md  SECURT_LINES_MANUAL_TEST.md
tests/manual/Core_API/: CONFIG_BIND_AND_RESTART_MANUAL_TEST.md  CORE_AI_MANUAL_TEST.md  EVENTS_OUTPUT_MANUAL_TEST.md  FACE_DETECTION_GLOBAL_TOGGLE_MANUAL_TEST.md  FONT_MANUAL_TEST.md  HEALTH_VERSION_LICENSE_MANUAL_TEST.md  INSTANCE_API_MANUAL_TEST.md  INSTANCE_FPS_MANUAL_TEST.md  INSTANCE_UPDATE_HOT_RELOAD_MANUAL_TEST.md  INSTANCE_UPDATE_HOT_RELOAD_TEST_RUN.md  LOG_CONFIG_API_GUIDE.md  LOG_CONFIG_MANUAL_TEST.md  LOG_LIST_MANUAL_TEST.md  MODEL_MANUAL_TEST.md  SERVER_SETTINGS_MONITORING_MANUAL_TEST.md  SYSTEM_CONFIG_MANUAL_TEST.md  SYSTEM_CONFIG_QUICK_TEST.md  VIDEO_MANUAL_TEST.md  WATCHDOG_DEVICE_REPORT_CONFIG_API.md  WATCHDOG_DEVICE_REPORT_MANUAL_TEST.md  run_patch_crossinglines_test.sh
tests/manual/Groups/: GROUPS_MANUAL_TEST.md
tests/manual/Nodes/: NODE_MANUAL_TEST.md
tests/manual/ONVIF/: ONVIF_MANUAL_TEST_GUIDE.md  ONVIF_QUICK_TEST.md
tests/manual/Recognition/: RECOGNITION_API_GUIDE.md
tests/manual/Solutions/: SOLUTION_MANUAL_TEST.md
tests/unit/: README.md  test_main.cpp
tests/unit/Analytics/: test_ai_handler.cpp  test_area_handler.cpp  test_ba_jam_detection_params.cpp  test_ba_jam_pipeline.cpp  test_jams_handler.cpp  test_lines_handler.cpp  test_securt_handler.cpp  test_stops_handler.cpp
tests/unit/Core_API/: test_ai_processor.cpp  test_config_handler.cpp  test_decoder_detector.cpp  test_endpoints_handler.cpp  test_health_handler.cpp  test_inference_session.cpp  test_metrics_handler.cpp  test_preferences_manager.cpp  test_swagger_handler.cpp  test_system_config_manager.cpp  test_system_handler.cpp  test_system_info_handler.cpp  test_version_handler.cpp  test_watchdog_handler.cpp
tests/unit/Groups/: test_group_handler.cpp
tests/unit/Instance_Management/: test_create_instance_handler.cpp  test_instance_configure_stream.cpp  test_instance_fps_handler.cpp  test_instance_get_config.cpp  test_instance_status_summary.cpp  test_instance_storage.cpp  test_instance_update.cpp
tests/unit/Nodes/: test_node_handler.cpp  test_node_pool_handler.cpp
tests/unit/ONVIF/Script/: test_onvif_debug.sh  test_onvif_debug_camera_id.sh  test_onvif_full.sh
tests/unit/Recognition/: test_recognition_handler.cpp
tests/unit/Solutions/: test_solution_handler.cpp
(+675 files in other folders)
